feat(back): [2] add domain packages
