# src/main/java/com/ffresco/pricelist/infrastructure/adapter/in/api/JsonApiResource.java
@@ -1,8 +1,0 @@
-package com.ffresco.pricelist.infrastructure.adapter.in.api;
-
-public record JsonApiResource<T>(
-        String type,
-        String id,
-        T attributes
-) {
-}
