# src/main/java/com/ffresco/pricelist/infrastructure/adapter/in/api/pricelist/PriceListProductAttributes.java
@@ -1,11 +1,0 @@
-package com.ffresco.pricelist.infrastructure.adapter.in.api.pricelist;
-
-import java.math.BigDecimal;
-
-public record PriceListProductAttributes(
-        String id,
-        String name,
-        BigDecimal price,
-        String currency
-) {
-}
